--- a/ios/ClearSpendMobile/LaunchScreen.storyboard
+++ b/ios/ClearSpendMobile/LaunchScreen.storyboard
@@ -16,14 +16,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SplashIcon" translatesAutoresizingMaskIntoConstraints="NO" id="gcL-BS-RjS">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashLogo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gcL-BS-RjS">
+                                <rect key="frame" x="59" y="278" width="258" height="111"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gcL-BS-RjS" secondAttribute="height" multiplier="86:37" id="amT-27-8BC"/>
+                                    <constraint firstAttribute="width" constant="258" id="aop-7g-wNe"/>
+                                    <constraint firstAttribute="height" constant="111" id="iEr-mA-Yrx"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="0.11372549019607843" green="0.30588235294117649" blue="0.84705882352941175" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Axm-wY-i7L"/>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KYG-MS-OQi"/>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="S3Y-TD-879"/>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="rqd-bE-4b6"/>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="uDu-e0-Wh2"/>
+                            <constraint firstItem="gcL-BS-RjS" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ucM-GX-JXZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -32,6 +44,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="SplashIcon" width="417.5" height="186"/>
+        <image name="SplashLogo" width="258" height="111"/>
     </resources>
 </document>
